<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.onboarding.PhoneFragment">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/otp_animation"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:padding="@dimen/_16sdp"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        android:layout_marginBottom="@dimen/_1sdp"
        android:layout_marginTop="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_fileName="otp.json" />

    <TextView
        android:id="@+id/tv_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textSizeNormal"
        android:textColor="@color/textPrimary"
        app:layout_constraintTop_toBottomOf="@+id/otp_animation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_32sdp"
        android:text="@string/we_have_sent_a_verification_code_to"/>

    <TextView
        android:id="@+id/tv_phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="+91-882465636"
        android:fontFamily="@font/calibri"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="@dimen/textSizeMedium2"
        android:layout_marginTop="@dimen/_8sdp"
        app:layout_constraintTop_toBottomOf="@+id/tv_label"/>

    <com.chaos.view.PinView
        android:id="@+id/pin_view"
        style="@style/PinWidget.PinView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_16sdp"
        android:cursorVisible="false"
        android:inputType="number"
        app:hideLineWhenFilled="false"
        app:itemCount="6"
        android:text=""
        app:itemHeight="@dimen/_38sdp"
        app:itemRadius="@dimen/_7sdp"
        app:itemWidth="@dimen/_38sdp"
        android:textColor="@color/black"
        android:textSize="@dimen/textSizeNormal"
        app:lineColor="@color/selector_pinnview_lines"
        app:lineWidth="1dp"
        android:itemBackground="@drawable/bg_light_gray_underlay"
        app:itemSpacing="@dimen/_6sdp"
        android:layout_marginStart="@dimen/_18sdp"
        android:layout_marginEnd="@dimen/_18sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintBottom_toTopOf="@+id/countdown_resend"
        app:layout_constraintTop_toBottomOf="@+id/tv_phone_number"/>

    <Chronometer
        android:id="@+id/countdown_resend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="00:45"
        android:textSize="@dimen/textSizeMedium2"
        android:textColor="@color/black"
        android:layout_marginBottom="@dimen/_24sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tv_didnt_receive_code"/>

    <TextView
        android:id="@+id/tv_didnt_receive_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/didn_t_receive_the_code"
        android:textColor="@color/textPrimary"
        android:paddingTop="@dimen/_2sdp"
        android:paddingBottom="@dimen/_2sdp"
        android:layout_marginBottom="@dimen/_24sdp"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_resend_now"
        />

    <TextView
        android:id="@+id/tv_resend_now"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resend_now"
        android:enabled="false"
        android:textColor="@color/textSecondary"
        android:fontFamily="@font/nunito_semibold"
        android:layout_marginStart="@dimen/_8sdp"
        android:paddingTop="@dimen/_2sdp"
        android:paddingBottom="@dimen/_2sdp"
        android:layout_marginBottom="@dimen/_24sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_didnt_receive_code"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>